@@ -16,6 +16,9 @@ MAJOR RELEASE
 		Version 1.3.2
 		-------------
 		*removed wild-card imports, removed unused imports
+		*new renameFRI.py
+		*tools.mergeTool:
+			-added sameName option to checkOverlappingContours() and separateOverlappingContours()
 		
 		-------------
 		Version 1.3.1
